--- a/Experts.html
+++ b/Experts.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="EXPERTS">
-        <a href="Experts.html"> <img src="images/EXPERTS.png"></a>
+        <a href="Experts.html"> <img src="images/Experts.png"></a>
     </div>
     <span class="Text1">
         Talk to experts.
